trying to fix white space on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -127,12 +127,15 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
-/*
-html {
-  height: 200%;
-} */
 
 body {
   background-image: linear-gradient(180deg, #52acff 25%, #ffe32c 100%);
   background-repeat: no-repeat;
+}
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
 }
